Adding dummy html for testing for tasks display

--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <!-- Viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Meta Information -->
+  <title>TODO - Task Master!</title>
+  <meta charset="UTF-8">
 
+  <!-- External CSS -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+  <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/header.js"></script>
   <script type="text/javascript" src="/scripts/register.js"></script>
-
-  <title>Home Page</title>
   </head>
 
 <body>
+  <!-- Nav Bar -->
   <nav>
+    <h1>Welcome back, </h1>
     <h1>Task Master!</h1>
-    <div class = "nav_buttons">
-      <button id='register-button'>Register</button>
-      <button>Logout</button>
-    </div>
   </nav>
-  <br>
-  <br>
-  <br>
-  <br>
 
+  <!-- Header -->
   <header id="main-header" class="main-header">
+
+    <header class="theProfile">
+      <div>
+        Test
+      </div>
+      <div>
+        <h2>Dickson Yu</h2>
+      </div>
+    </header>
+
   </header>
 
+  <!-- Page-Specific (Main) Content Here -->
   <main>
+
+    <section class="tasks">
+      <article class="listed-tasks">
+    <header>
+      <h4>Lunch w/ the boys</h4>
+      <span class="icons">Icons</span>
+    </header>
+    <article class="inner-content">
+      <p>Due - Jan 10th, 2022 @ 1:00pm</p>
+    </article>
+    </article>
+  </section>
 
   </main>
   <!-- <div class = "login_register">
