Adding more test html

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+<!-- External Library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -29,34 +32,54 @@
     <h1>Task Master!</h1>
   </nav>
 
-  <!-- Header -->
-  <header id="main-header" class="main-header">
-
-    <header class="theProfile">
-      <div>
-        Test
-      </div>
-      <div>
-        <h2>Dickson Yu</h2>
-      </div>
-    </header>
-
-  </header>
-
   <!-- Page-Specific (Main) Content Here -->
   <main>
 
+    <section class="main-content">
+      <h1>Food// To Do</h1>
+    </section>
+
     <section class="tasks">
+
       <article class="listed-tasks">
     <header>
       <h4>Lunch w/ the boys</h4>
-      <span class="icons">Icons</span>
+      <span class="icons">
+        <i class="fa-solid fa-info fa-fw"></i>
+        <i class="fa-solid fa-pen-to-square fa-fw"></i>
+        <i class="fa-solid fa-trash-can fa-fw"></i>
+      </span>
     </header>
     <article class="inner-content">
       <p>Due - Jan 10th, 2022 @ 1:00pm</p>
     </article>
     </article>
+
+    <article class="listed-tasks">
+      <header>
+        <h4>Lunch w/ the boys</h4>
+        <span class="icons">
+          <i class="fa-solid fa-info fa-fw"></i>
+          <i class="fa-solid fa-pen-to-square fa-fw"></i>
+          <i class="fa-solid fa-trash-can fa-fw"></i>
+        </span>
+      </header>
+      <article class="inner-content">
+        <p>Due - Jan 10th, 2022 @ 1:00pm</p>
+      </article>
+      </article>
+
+
   </section>
+<footer>
+  <i class="fas fa-tasks fa-3x fa-fw"></i>
+  <i class="fa-solid fa-tv fa-3x fa-fw"></i>
+  <i class="fa-solid fa-book-open fa-3x fa-fw"></i>
+  <i class="fa-solid fa-cart-shopping fa-3x fa-fw"></i>
+  <i class="fa-solid fa-utensils fa-3x fa-fw"></i>
+
+</footer>
+
 
   </main>
   <!-- <div class = "login_register">
