minor name tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -144,16 +144,16 @@
         <textarea name = "description", id = "task_description"></textarea>
         <label>Description</label>
         <br>
-        <textarea></textarea>
+        <textarea name ="start_date", id = "task_start_date"></textarea>
         <label>Start Date</label>
         <br>
-        <textarea></textarea>
+        <textarea name ="end_date", id = "task_end_date"></textarea>
         <label>End Date</label>
         <br>
-        <textarea></textarea>
+        <textarea name ="category", id = "task_category"></textarea>
         <label>Category</label>
         <br>
-        <textarea></textarea>
+        <textarea name ="priority", id = "task_priority"></textarea>
         <label>Priority</label>
         <br>
         <button type="submit" form="new_task_form">Create New Task!</button>
