task route created

--- a/public/index.html
+++ b/public/index.html
@@ -112,27 +112,16 @@
     <br>
     <br>
 
-
+-->
     <h2>TO DO:</h2>
 
-    <div class = "task">
+    <div id = "task_container">
 
-      <div class = "check_complete">
+     
 
-        <input type = "checkbox">
-        <div class = "task_data">
-          <h5>Lunch</h5>
-          <h5>Due - Jan 7th, 2021 @1:00PM</h5>
-        </div>
+    </div>
 
-      </div>
-
-
-      <h5>Icons(info, edit, delete)</h5>
-
-      </div>
-
-  </div> -->
+  </div> 
 
   <!-- New Task -->
      <div class = "new_task">
