created function that adds a new task to the database. Also created routes for the task

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
   <!-- New Task -->
      <div class = "new_task">
      <h4>New Task</h4>
-      <form id = "new_task_form">
+      <form action="/task" method="post" id = "new_task_form">
         <textarea name = "task", id = "task_title"></textarea>
         <label>Task</label>
         <br>
