Fixing spacing and adding tasks.js

--- a/public/index.html
+++ b/public/index.html
@@ -24,27 +24,18 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/header.js"></script>
   <script type="text/javascript" src="/scripts/register.js"></script>
+  <script type="text/javascript" src="/scripts/tasks.js"></script>
   <script type="text/javascript" src="/scripts/new_task.js"></script>
 
-  <title>Home Page</title>
   </head>
 
 <body>
   <!-- Nav Bar -->
-  <nav id="nav">
-  </nav>
+  <nav id="nav"></nav>
 
   <!-- Page-Specific (Main) Content Here -->
   <main></main>
 
-<footer>
-  <i class="fas fa-tasks fa-2x fa-fw"></i>
-  <i class="fa-solid fa-tv fa-3x fa-fw"></i>
-  <i class="fa-solid fa-book-open fa-3x fa-fw"></i>
-  <i class="fa-solid fa-cart-shopping fa-3x fa-fw"></i>
-  <i class="fa-solid fa-utensils fa-3x fa-fw"></i>
-
-</footer>
 <!-- <div class = "login_register">
 
     <div class = "login_promt">
@@ -75,7 +66,7 @@
     </div>
 
   </div> -->
-  <div class = "to_do_app">
+  <!-- <div class = "to_do_app"> -->
 
   <!-- <div class = "profile_display">
     <img src="https://assets.change.org/photos/6/ty/dv/YMTydVZcocrnsek-1600x900-noPad.jpg?1582189423">
@@ -120,31 +111,25 @@
     <br>
 
 -->
-    <h2>TO DO:</h2>
 
-    <div id = "task_container">
+
+    <!-- <div id = "task_container">
 
 
 
     </div>
 
-  </div>
+  </div> -->
 
-  <!-- New Task -->
+  <!-- New Task
      <div class = "new_task">
      <h4>New Task</h4>
       <form action="/task" method="post" id = "new_task_form">
         <textarea name = "task", id = "task_title"></textarea>
         <label>Task</label>
         <br>
-        <textarea name = "description", id = "task_description"></textarea>
-        <label>Description</label>
-        <br>
         <textarea name ="start_date", id = "task_start_date"></textarea>
         <label>Start Date</label>
-        <br>
-        <textarea name ="end_date", id = "task_end_date"></textarea>
-        <label>End Date</label>
         <br>
         <textarea name ="category", id = "task_category"></textarea>
         <label>Category</label>
@@ -161,4 +146,13 @@
 
 </body>
 
+<footer>
+  <i class="fas fa-tasks fa-2x fa-fw"></i>
+  <i class="fa-solid fa-tv fa-3x fa-fw"></i>
+  <i class="fa-solid fa-book-open fa-3x fa-fw"></i>
+  <i class="fa-solid fa-cart-shopping fa-3x fa-fw"></i>
+  <i class="fa-solid fa-utensils fa-3x fa-fw"></i>
+
+</footer> -->
+</body>
 </html>
