Fixing auto clear on submit

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
   <nav id="nav"></nav>
 
   <!-- Page-Specific (Main) Content Here -->
-  <main></main>
+  <main>
+    <section class="taskContainer"></section>
+  </main>
 
 <!-- <div class = "login_register">
 
