Deleting a section class

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,7 @@
   <nav id="nav"></nav>
 
   <!-- Page-Specific (Main) Content Here -->
-  <main>
-    <section class="taskContainer"></section>
-  </main>
+  <main></main>
 
 <!-- <div class = "login_register">
 
